# ghost

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: context.rs  discover.rs  hooks.rs  main.rs  manifest.rs  ninja.rs  profile.rs
test_project/: build.lua  ghost.build  ghost.profile
test_project/apps/: app.cpp  ghost.build
test_project/libs/add/: ghost.build
test_project/libs/io/: ghost.build  io.cpp
test_project/libs/io/include/: io.hpp
