[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
mlua = { version = "0.9", default-features = false, features = ["lua54", "vendored", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
camino = "1.0"
indicatif = "0.17"
pathdiff = "0.2.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

